force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/H8_Flow_Form_Section_Validation__mdt.object-meta.xml
<CustomObject>
    <description>This object is used to support dynamic validations within forms where you want to leave all questions as optional until the final page and then only display the fields that are missing.</description>
    <label>H8 Flow Form Section Validation</label>
    <pluralLabel>H8 Flow Form Section Validations</pluralLabel>
</CustomObject>