force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/CustomErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>CustomErrorMessage__c</fullName>
    <inlineHelpText>You can populate a custom error message here, the default will not display an error other than saying this field is required but you might want to include a custom error message like - This field is required as we use this within the decision making process</inlineHelpText>
    <label>Custom Error Message</label>
    <type>TextArea</type>
</CustomField>