force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>