force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <inlineHelpText>This is the field api name that you want to validation during this process. If you want to validate a field on a parent record you should enter LookupFieldField(__r).FieldAPIName</inlineHelpText>
    <label>FieldAPIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>