force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/FlowValidationType__c.field-meta.xml
<CustomField>
    <fullName>FlowValidationType__c</fullName>
    <label>FlowValidationType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>