force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/H8_Flow_Form_Section__c.field-meta.xml
<CustomField>
    <fullName>H8_Flow_Form_Section__c</fullName>
    <label>H8 Flow Form Section</label>
    <referenceTo>H8_Flow_Form_Section__mdt</referenceTo>
    <relationshipLabel>H8 Flow Form Section Validations</relationshipLabel>
    <relationshipName>H8_Flow_Form_Section_Validations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>