force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/IsFlowValidation__c.field-meta.xml
<CustomField>
    <fullName>IsFlowValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFlowValidation?</label>
    <type>Checkbox</type>
</CustomField>