force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>Use this to determine the order that the validation fields are returned in. To make it easier on your self set these in increments of 10 as that saves you if you need to add a new field in the middle from having to reorder everything</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>