force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <label>Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>