force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/QuestionName__c.field-meta.xml
<CustomField>
    <fullName>QuestionName__c</fullName>
    <inlineHelpText>This should be the text that you have put within the question name on the flow</inlineHelpText>
    <label>Question Name</label>
    <type>TextArea</type>
</CustomField>