force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/Use_Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Use_Custom_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When you select this option you can set the Page, Question Name as custom labels, you do not need to provide $Label. just the Label API Name</inlineHelpText>
    <label>Use Custom Label</label>
    <type>Checkbox</type>
</CustomField>