force-app/main/default/objects/H8_Flow_Form_Section_Validation__mdt/fields/Validation_Value__c.field-meta.xml
<CustomField>
    <fullName>Validation_Value__c</fullName>
    <inlineHelpText>Enter the expected value in here this is mainly expected to be used for booleans and number fields and not have hardcoded text values within them</inlineHelpText>
    <label>Validation Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>